# xldump

./: .git-pr-release-template  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Claude.md  README.ja.md  README.md  README.zh-CN.md  main.py  pyproject.toml  ruff.toml
.github/: pull_request_template.md  release-please-config.json  renovate.json  reviewdog.yml
.github/.serena/: project.yml
.github/.serena/memories/: code_style.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: mypy-review.sh  ruff-review.sh
.github/workflows/: mypy.yml  pr-auto-labeler.yml  promote-to-production.yml  promote-to-staging.yml  release.yml  renovate.yml  ruff.yml  test.yml
docs/: MYPY.md  RENOVATE.md  RUFF.md  TESTING.md  output-format.ja.md  output-format.md  output-format.zh-CN.md
src/xldump/: __init__.py  cli.py  core.py  models.py
src/xldump/extractors/: __init__.py  cell.py  color.py  image.py  merge.py  sheet.py  validation.py
src/xldump/formatters/: __init__.py  base.py  json.py
tasks/: phase2_investigation.md  team.md
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_example.py  test_extractors.py  test_formatters.py
tests/fixtures/: data_validations.xlsx  merged_cells.xlsx  multi_sheet.xlsx  simple_table.xlsx  styled_cells.xlsx  with_images.xlsx
